fixed alignment of closed chevron

--- a/src/components/collapsible/_collapsible.scss
+++ b/src/components/collapsible/_collapsible.scss
@@ -42,7 +42,7 @@ $collapsible-caret-width: 1.5rem;
       display: inline-block;
       fill: $color-text-link;
       height: $collapsible-caret-width;
-      left: -0.2rem;
+      left: -0.15rem;
       position: absolute;
       top: -0.25rem;
       width: $collapsible-caret-width;
